--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,20 @@ body, html {
     overflow: hidden;
 
 .container {
+    width: 100%;
+    max-width: 1080px;
+    height: 100%;
+    max-height: 1920px;
+    border: 1px solid #000;
+    background: #ff00cc;
+    overflow: hidden;
     text-align: center;
-    padding: 100px;
-    border-radius: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #timer-container {
